tests/paczka1/fuzzy1/23028280.err
Error in line 1: pbXa41t S823 74,8
Error in line 3: xP3IYbNe A242 88,5
Error in line 9: T5uG1 A242 88,5
Error in line 16: A366 A366 39,3
Error in line 22: T5uG1 S808 39,3
